--- a/css/main.css
+++ b/css/main.css
@@ -1,76 +1,69 @@
-body{
-  margin: 0;
-  background: #222;
-}
-header{
-  background: #4CB2D4;
-
-}
-
-header::after{
-  content: '';
-  display: table;
-  clear:both;
-}
-
-.container {
-  width: 80%;
-  margin: 0 auto;
-}
-
-#navbar{
-  float: right;
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
+*{
   margin: 0;
   padding: 0;
-  list-style: none;
-  /* display: inline; */
+
 }
 
-#navbar li{
-  display: inline-block;
-  margin-left: 70px;
-  padding-top: 22px;
-}
-
-#navbar a{
-  color: #444;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-#navbar a:hover{
+  /* para cambiarle el color a los iconos */
+.fa-bars{
   color: #000;
 }
 
-#main-header{
-  float: left;
-  /* display: inline; */
-  /* position: absolute; */
+.navbar:not(.navbar-transparent){
+  background-image: linear-gradient(to right, black , green);
 }
 
-#main-header:hover{
-
+body{
+  background:
+  linear-gradient(
+    /* rgba(29, 94, 44, 0.5), */
+    rgba(48, 68, 53, 0.7),
+    rgba(48, 68, 53, 0.7)
+    ),
+    url(../img/IMG_20180816_094337419_HDR-PANO.jpg);
+  background-repeat: repeat-x;
+  /* background-position: 50% 50%; */
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-#contact {
-  border: 5px solid;
-  padding: 10px;
+.text{
+  font-family: 'Raleway', sans-serif;
+}
+i{
+  text-align: center;
 
 }
-
-/* #contact::before{
-  content: "";
-  display: block;
-  height: 5px;
-  background-color: #444;
-
-  position: absolute;
-  top: 0;
-  width: 0%;
-
-  transition: all ease-in-out 250ms;
+.nav-tabs-navigation{
+  width: 185px;
+  border: 2px solid #fff;
+  background: #333;
+  margin-top: 40px;
 }
 
-#contact:hover::before{
-  width: 100%;
+/* .card-body{
+  border: 2px solid #fff;
+  background: #333;
+  /* transition: border 3s ease-out; */
+    /* flex-grow: 1 !important ;
+    flex-shrink: 1;
+    flex-basis: auto; */
+/* } */ 
+.tab-pane{
+  border: 1px solid;
+  background-color: #333;
+  color: white;
+}
+
+.tab-pane.active {
+    animation: all 2s ease-out;
+}
+
+/* html {
+  overflow-y: scroll;
 } */
+
+#PDF{
+  font-family: 'Raleway', sans-serif;
+}
