--- a/css/main.css
+++ b/css/main.css
@@ -1,96 +1,129 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
-*{
-  margin: 0;
-  padding: 0;
-
+*
+{
+    margin: 0;
+    padding: 0;
 }
 
-  /* para cambiarle el color a los iconos */
-.fa-bars{
-  color: #000;
+/* para cambiarle el color a los iconos */
+.fa-bars
+{
+    color: #000;
 }
 
-.navbar:not(.navbar-transparent){
-  background-image: linear-gradient(to right, black , green);
+.navbar:not(.navbar-transparent)
+{
+    background-image: linear-gradient(to right, black , green);
 }
 
-body{
-  background:
-  linear-gradient(
-    rgba(48, 68, 53, 0.7),
-    rgba(48, 68, 53, 0.7)
+body
+{
+    background: linear-gradient(
+    rgba(48, 68, 53, .7),
+    rgba(48, 68, 53, .7)
     ),
     url(../img/IMG_20180816_094337419_HDR-PANO.jpg);
-  background-repeat: repeat-x;
-  /* background-position: 50% 50%; */
-  background-attachment: fixed;
-  background-size: cover;
+    background-repeat: repeat-x;
+    /* background-position: 50% 50%; */
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-.text{
-  font-family: 'Raleway', sans-serif;
+.text
+{
+    font-family: 'Raleway', sans-serif;
 }
 
-.nav-tabs-navigation{
-  width: 185px;
-  border: 2px solid #fff;
-  background: #333;
-  margin-top: 40px;
+.nav-tabs-navigation
+{
+    width: 185px;
+    margin-top: 40px;
+
+    border: 2px solid #fff;
+    background: #333;
 }
 
-
-.tab-pane{
-  border: 2px solid;
-  background-color: #333;
-  color: white;
+.nav-link
+{
+    text-align: center;
+    font-size: 32px;
 }
 
-.btn{
-  /* color: #fff !important;
+.tab-pane
+{
+    color: white;
+    border: 2px solid;
+    background-color: #333;
+}
+
+.btn
+{
+    /* color: #fff !important;
   background-color: #333 !important;
   border : 2px solid white !important;
   border-radius: 6px !important; */
 }
 
-#PDF{
-  font-family: 'Raleway', sans-serif;
+#PDF
+{
+    font-family: 'Raleway', sans-serif;
+
+    margin-top: 5vh;
 }
-.title{
-  margin-top: 20vh;
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  color: #eee;
-  /* text-shadow: 4px 0 0 #222, -4px 0 0 #222, 0 4px 0 #222, 0 -4px 0 #222, 2px 2px #222, -2px -2px 0 #222, 2px -2px 0 #222, -2px 2px 0 #222; */
-  text-shadow: 4px 0 0 #222, -4px 0 0 #222, 0 4px 0 #222, 0 -4px 0 #222, 4px 4px #222, -4px -4px 0 #222, 4px -4px 0 #222, -4px 4px 0 #222;
+#PDF a
+{
+    color: white;
 }
-.subtitle{
-  font-family: 'Raleway', sans-serif;
-  text-align: center;
-  color: #eee;
+.title
+{
+    font-family: 'Raleway', sans-serif;
+
+    margin-top: 20vh;
+
+    text-align: center;
+
+    color: #eee;
+    /* text-shadow: 4px 0 0 #222, -4px 0 0 #222, 0 4px 0 #222, 0 -4px 0 #222, 2px 2px #222, -2px -2px 0 #222, 2px -2px 0 #222, -2px 2px 0 #222; */
+    text-shadow: 4px 0 0 #222, -4px 0 0 #222, 0 4px 0 #222, 0 -4px 0 #222, 4px 4px #222, -4px -4px 0 #222, 4px -4px 0 #222, -4px 4px 0 #222;
 }
-#abbutton{
-  background-color: rgba(3, 3, 3, 0.5);
-  border: 2px solid #fff;
-  /* float:left; */
-  /* margin-left: 25vw; */
-  /* margin-right: 25vw; */
-  text-transform: uppercase;
+.subtitle
+{
+    font-family: 'Raleway', sans-serif;
+
+    text-align: center;
+
+    color: #eee;
 }
-#abbutton:hover{
-  background-color: white;
-  color: black;
+#abbutton
+{
+    /* float:left; */
+    /* margin-left: 25vw; */
+    /* margin-right: 25vw; */
+    text-transform: uppercase;
+
+    border: 2px solid #fff;
+    background-color: rgba(3, 3, 3, .5);
 }
-.botones{
-  text-align: center;
+#abbutton:hover
+{
+    color: black;
+    background-color: white;
 }
-#resbutton{
-  background-color: rgba(3, 3, 3, 0.5);
-  border: 2px solid #fff;
-  /* float: right; */
-  /* margin-right: 25vw; */
-  text-transform: uppercase;
+.botones
+{
+    text-align: center;
 }
-#resbutton:hover{
-  background-color: white;
-  color: black;
+#resbutton
+{
+    /* float: right; */
+    /* margin-right: 25vw; */
+    text-transform: uppercase;
+
+    border: 2px solid #fff;
+    background-color: rgba(3, 3, 3, .5);
+}
+#resbutton:hover
+{
+    color: black;
+    background-color: white;
 }
