--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ body
   text-align: left;
 }
 
-.expandall{#97a7b4
+.expandall{
   color: #f96332;
   /* color: white; */
   text-decoration: none;
